--- a/spring-conversion-service-km/src/main/resources/application.properties
+++ b/spring-conversion-service-km/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=currency-conversion-service-km
 server.port=8100
+
+currency-exchange-service-km.ribbon.listOfServers=http://localhost:8000,http://localhost:8001
